--- a/app/src/main/res/layout/fragment_sleep_tracker.xml
+++ b/app/src/main/res/layout/fragment_sleep_tracker.xml
@@ -23,6 +23,10 @@
          the whole ViewModel, so that we can access the LiveData,
          click handlers, and state variables. -->
     <data>
+        <import type="android.view.View"/>
+        <variable
+            name="sleepTrackerViewModel"
+            type="com.example.android.trackmysleepquality.sleeptracker.SleepTrackerViewModel" />
 
     </data>
 
@@ -56,7 +60,7 @@
                 android:layout_marginStart="@dimen/margin"
                 android:layout_marginTop="@dimen/margin"
                 android:layout_marginEnd="@dimen/margin"
-                android:text="@string/how_was_hour_sleep" />
+                android:text="@{sleepTrackerViewModel.nightString}" />
         </ScrollView>
 
         <!-- With data binding and LiveData, we can track the buttons' visibility states
@@ -64,6 +68,8 @@
              you can set it for the Views using this lambda pattern. -->
 
         <Button
+            android:enabled="@{!sleepTrackerViewModel.isTracking()}"
+            android:onClick="@{_->sleepTrackerViewModel.onStart()}"
             android:id="@+id/start_button"
             style="@style/SleepButtons"
             android:layout_width="wrap_content"
@@ -76,6 +82,8 @@
             app:layout_constraintStart_toStartOf="parent" />
 
         <Button
+            android:enabled="@{sleepTrackerViewModel.isTracking()}"
+            android:onClick="@{_->sleepTrackerViewModel.onStop()}"
             android:id="@+id/stop_button"
             style="@style/SleepButtons"
             android:layout_width="wrap_content"
@@ -88,6 +96,8 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <Button
+            android:enabled="@{sleepTrackerViewModel.clearButtonEnabled}"
+            android:onClick="@{_->sleepTrackerViewModel.onClear()}"
             android:id="@+id/clear_button"
             style="@style/SleepButtons"
             android:layout_width="wrap_content"
