--- a/app/src/main/res/layout/list_item_sleep_night.xml
+++ b/app/src/main/res/layout/list_item_sleep_night.xml
@@ -9,25 +9,22 @@
             name="sleep"
             type="com.example.android.trackmysleepquality.database.SleepNight" />
 
-        <variable
-            name="clickListener"
-            type="com.example.android.trackmysleepquality.sleeptracker.SleepNightListener" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:foregroundGravity="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:onClick="@{() -> clickListener.onClick(sleep)}">
+        android:orientation="vertical">
 
         <ImageView
             android:id="@+id/quality_image"
             android:layout_width="@dimen/icon_size"
             android:layout_height="60dp"
-            android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:sleepImage="@{sleep}"
@@ -40,8 +37,17 @@
             android:layout_marginTop="8dp"
             app:layout_constraintEnd_toEndOf="@+id/quality_image"
             app:layout_constraintStart_toStartOf="@+id/quality_image"
-            app:layout_constraintTop_toBottomOf="@+id/quality_image"
-            app:sleepQualityString="@{sleep}" />
+            app:layout_constraintTop_toBottomOf="@+id/quality_image" />
+
+<!--        <TextView-->
+<!--            android:layout_marginStart="20dp"-->
+<!--            android:id="@+id/textView"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            sleepDurationString="@{sleep}"-->
+<!--            app:layout_constraintBottom_toBottomOf="@+id/quality_image"-->
+<!--            app:layout_constraintStart_toEndOf="@+id/quality_image"-->
+<!--            app:layout_constraintTop_toTopOf="@+id/quality_image" />-->
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
